// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`number() should return an error for non-number values 1`] = `
Object {
  "message": "Value should be a number",
  "path": Array [],
  "type": "single",
  "value": "5",
}
`;

exports[`number() should return an error for non-number values 2`] = `
Object {
  "message": "Value should be a number",
  "path": Array [],
  "type": "single",
  "value": Object {},
}
`;

exports[`number() should return an error for non-number values 3`] = `
Object {
  "message": "Value should be a number",
  "path": Array [],
  "type": "single",
  "value": Array [],
}
`;

exports[`number() should return an error for non-number values 4`] = `
Object {
  "message": "Value should be a number",
  "path": Array [],
  "type": "single",
  "value": [Function],
}
`;

exports[`number() should return an error for non-number values 5`] = `
Object {
  "message": "Value should be a number",
  "path": Array [],
  "type": "single",
  "value": null,
}
`;

exports[`number() should return an error for non-number values 6`] = `
Object {
  "message": "Value should be a number",
  "path": Array [],
  "type": "single",
  "value": undefined,
}
`;

exports[`number() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "type": "single",
  "value": "5",
}
`;
